--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -10,7 +10,8 @@
 <body>
 <!-- Header -->
 <div class="header">
-    <h1>SGARB-AI</h1>
+    <!--<h1>SGARB-AI</h1>-->
+    <img src="/static/images/logo_2su1.png" alt="SGARB-AI" class="logo">
 </div>
 
 <!-- Main content -->
@@ -37,9 +38,12 @@
     </div>
 </div>
 
+<div style="margin: 50px"><br>
+    </div>
+
 <!-- Footer -->
 <div class="footer">
-    <p>&copy; 2025 SGARB-AI. Tutti i diritti riservati.</p>
+    <p>&copy; 2025 SGARB-AI <i>by The Simps</i>. Tutti i diritti riservati.</p>
 </div>
 </body>
 </html>
