Added icons and fixed useless code in index.html

--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
 
     <title>SGARB-AI Image Classifier</title>
 
@@ -47,7 +46,11 @@
         <div class="row g-5 align-items-center">
             <!-- Left block -->
             <div id="left-block" class="block col-12 col-md-2 text-center shadow-sm py-4 pr-6 rounded ms-md-4">
-                <p>IA</p>
+                <img src="/static/images/goat.png" alt="SGARB-AI" class="logo img-fluid" style="top: 0; left: 0; max-height: 70px;">
+                <div>
+                    <div>IA</div>
+                    <div id="perc-IA">---</div>
+                </div>
             </div>
 
             <!-- Center block -->
@@ -65,7 +68,11 @@
 
             <!-- Right block -->
             <div id="right-block" class="block col-12 col-md-2 text-center shadow-sm py-4 rounded me-md-4">
-                <p>Real</p>
+                <img src="/static/images/human.png" alt="SGARB-AI" class="logo img-fluid" style="top: 0; left: 0; max-height: 70px;">
+                <div>
+                    <div>REAL</div>
+                    <div id="perc-Real">---</div>
+                </div>
             </div>
         </div>
     </main>
@@ -80,9 +87,6 @@
 
 <!-- Bootstrap core JavaScript -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-<script src="../../assets/js/vendor/popper.min.js"></script>
-<script src="../../dist/js/bootstrap.min.js"></script>
 
 </body>
 
