--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -31,7 +31,7 @@
     <header class="masthead mb-auto position-relative">
         <div class="inner">
             <!-- Logo positioned in the top-left corner -->
-            <img src="/static/images/logo_2su1_w.png" alt="SGARB-AI" class="logo img-fluid position-absolute" style="top: 0; left: 0; max-height: 166px;">
+            <img src="/interface/static/images/logo_2su1_w.png" alt="SGARB-AI" class="logo img-fluid position-absolute" style="top: 0; left: 0; max-height: 166px;">
 
             <!-- Navigation centered -->
             <nav class="nav nav-masthead justify-content-center pt-3">
@@ -46,7 +46,7 @@
         <div class="row g-5 align-items-center">
             <!-- Left block -->
             <div id="left-block" class="block col-12 col-md-2 text-center shadow-sm py-4 pr-6 rounded ms-md-4">
-                <img src="/static/images/goat.png" alt="SGARB-AI" class="logo img-fluid" style="top: 0; left: 0; max-height: 70px;">
+                <img src="/interface/static/images/goat.png" alt="SGARB-AI" class="logo img-fluid" style="top: 0; left: 0; max-height: 70px;">
                 <div>
                     <div>IA</div>
                     <div id="perc-IA">---</div>
@@ -68,7 +68,7 @@
 
             <!-- Right block -->
             <div id="right-block" class="block col-12 col-md-2 text-center shadow-sm py-4 rounded me-md-4">
-                <img src="/static/images/human.png" alt="SGARB-AI" class="logo img-fluid" style="top: 0; left: 0; max-height: 70px;">
+                <img src="/interface/static/images/human.png" alt="SGARB-AI" class="logo img-fluid" style="top: 0; left: 0; max-height: 70px;">
                 <div>
                     <div>REAL</div>
                     <div id="perc-Real">---</div>
@@ -80,7 +80,7 @@
     <!-- Footer -->
     <footer class="mastfoot mt-auto">
         <div class="inner">
-            <p>&copy; 2025 SGARB-AI <i>by The Simps</i>. Tutti i diritti non ne abbiamo, siamo ritardati.</p>
+            <p>&copy; 2025 SGARB-AI. Tutti i diritti non ne abbiamo, siamo ritardati.</p>
         </div>
     </footer>
 </div>
