--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -80,7 +80,7 @@
     <!-- Footer -->
     <footer class="mastfoot mt-auto">
         <div class="inner">
-            <p>&copy; 2025 SGARB-AI <i>by The Simps</i>. Tutti i diritti non ne abbiamo, siamo ritardati.</p>
+            <p>&copy; 2025 SGARB-AI <i>by The Simps</i>. Diritti non ne abbiamo.</p>
         </div>
     </footer>
 </div>
