--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -44,11 +44,11 @@
         <div class="row g-5 align-items-center" style="max-height: 500px">
             <!-- Left block -->
             <div id="left-block" class="block">
-                    <div class="percentage-block left" id="block_perc_left">
+                    <div class="percentage-block left inactive" id="block_perc_left">
                         <div>IA</div>
                         <div id="perc-IA"></div>
                     </div>
-                <img src="../static/images/goat.png" alt="SGARB-AI" class="image">
+                <img src="../static/images/goat.png" alt="SGARB-AI" class="image" id="img-Real">
             </div>
 
             <!-- Center block -->
@@ -67,11 +67,11 @@
 
             <!-- Right block -->
             <div id="right-block" class="block">
-                <div class="percentage-block right" id="block_perc_right">
+                <div class="percentage-block right inactive" id="block_perc_right">
                     <div>REAL</div>
                     <div id="perc-Real"></div>
                 </div>
-                <img src="../static/images/human.png" alt="SGARB-AI" class="image">
+                <img src="../static/images/human.png" alt="SGARB-AI" class="image" id="img-IA">
             </div>
         </div>
     </main>
