--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -30,7 +30,7 @@
     <header class="masthead mb-auto position-relative">
         <div class="inner">
             <!-- Logo positioned in the top-left corner -->
-            <img src="../static/images/logo_2su1_w.png" alt="SGARB-AI" class="logo">
+            <img src="../static/images/name_w.png" alt="SGARB-AI" class="logo">
 
             <!-- Navigation centered -->
             <nav class="nav">
@@ -79,7 +79,7 @@
     <!-- Footer -->
     <footer class="mastfoot mt-auto">
         <div class="inner">
-            <p>&copy; 2025 SGARB-AI. Tutti i diritti non ne abbiamo, siamo ritardati.</p>
+            <p>&copy; 2025 SGARB-AI <i>by The Simps</i>.</p>
         </div>
     </footer>
 </div>
