--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SGARB-AI Image Classifier</title>
+    <title>SGARB-AI</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/cover/">
 
@@ -34,9 +34,9 @@
 
             <!-- Navigation centered -->
             <nav class="nav">
-                <a class="nav-link active" href="#">Home</a>
-                <a class="nav-link" href="#">Features</a>
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link active" href="/">Home</a>
+                <a class="nav-link" href="/features">Features</a>
+                <a class="nav-link" href="/contact">Contacts</a>
             </nav>
         </div>
     </header>
